istio/destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: devops-destination
spec:
  host: devops-virtual
