istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-virtual
spec:
  hosts:
  - "*"
  gateways:
  - devops-gateway
  http:
    - name: "devops-service-v1"
      match:
        - uri:
            prefix: /v1/
      rewrite:
        uri: /
      route:
        - destination:
            host: devops-service
            subset: v1
            port:
              number: 3000
    - name: "devops-service"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: devops-service
            subset: v1
            port:
              number: 3000
          weight: 50

  #  route:
  #  - destination:
  #    host: devops
  #    port:
  #      number: 80
